src/test/ui/structs/struct-path-alias-bounds.stderr
error[E0277]: the trait bound `NoClone: std::clone::Clone` is not satisfied
  --> $DIR/struct-path-alias-bounds.rs:9:13
   |
LL |     let s = A { a: NoClone };
   |             ^ the trait `std::clone::Clone` is not implemented for `NoClone`
   |
note: required by `S`
  --> $DIR/struct-path-alias-bounds.rs:3:1
   |
LL | struct S<T: Clone> { a: T }
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
